# gym-auto-trimmer

./: .gitignore  README.md  pyproject.toml
apps/cli/: main.py
configs/: default_hbar.yaml
docs/requirements/: 体操動画オートトリマー_要件定義_v_0.md
gymtrimmer/: __init__.py
gymtrimmer/export/: naming.py
gymtrimmer/io/: ffmpeg_writer.py  video_reader.py
gymtrimmer/logic/: merge_rules.py  motion_detect.py
