[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-auto-trimmer"
version = "0.1.0"
description = "Non-AI PoC for automatic gymnastics video trimming using classical CV heuristics."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
  "opencv-python>=4.8",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
trim-gym = "apps.cli.main:app"
